@@ -13,15 +13,22 @@ class TestDateTime < Test::Unit::TestCase
     end
   end
 
+  @@time_new_accepts_timezone = begin
+                                  Time.new(2001, 1, 1, 0, 0, 0, '+00:00')
+                                  true
+                                rescue
+                                  false
+                                end
+
   def string_to_time(str)
-    /(\d+)-(\d+)-(\d+) ?(?:(\d+):(\d+):(\d+))?(?:\.(\d+))? ?([+-]\d+:\d+)?/ =~ str
+    /(\d+)-(\d+)-(\d+) ?(?:(\d+):(\d+):(\d+))?(?:\.(\d+))? ?(([+-])(\d+):(\d+))?/ =~ str
     args = []
     args << $1.to_i # year
     args << $2.to_i # month
     args << $3.to_i # day
     args << $4.to_i if $4 # hour
     args << $5.to_i if $5 # minute
-    if $8
+    if $8 and @@time_new_accepts_timezone
       args << $6.to_i + $7.to_i.to_r / ('1' + '0' * ($7.length)).to_i
       args << $8
       Time.new(*args)
@@ -32,8 +39,20 @@ class TestDateTime < Test::Unit::TestCase
       if $7
         args << $7.to_i.to_r * 1000000 / ('1' + '0' * ($7.length)).to_i
       end
-      # no time zone
-      Time.local(*args)
+      if $8
+        # with time zone
+        offset = ($9 + '1').to_i * ($10.to_i * 60 + $11.to_i)
+        if offset == 0
+          Time.utc(*args)
+        else
+          tm = Time.local(*args)
+          raise "Failed to convert #{str} to Time" if tm.utc_offset != offset * 60
+          tm
+        end
+      else
+        # without time zone
+        Time.local(*args)
+      end
     end
     #Time.local(*str.split(/[- :\.]/).collect do |n| n.to_i; end)
   end
